--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Mosaic TraderApp</title>
-  <base href="mos-trade" />
+  <base href="https://majdajkd.github.io/mos-trade/" />
   <link href="css/app.css" rel="stylesheet" />
   <link href="css/mosaic.bootstrap.css" rel="stylesheet" />
   <!-- If you add any scoped CSS files, uncomment the following to load them
