--- a/404.html
+++ b/404.html
@@ -8,8 +8,7 @@
   <link href="css/app.css" rel="stylesheet" />
   <link href="css/mosaic.bootstrap.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
-  <!-- If you add any scoped CSS files, uncomment the following to load them
-  <link href="MOS.TraderApp.styles.css" rel="stylesheet" /> -->
+  <link rel="stylesheet" href="_content/Radzen.Blazor/css/default-base.css">
 </head>
 
 <body>
@@ -27,10 +26,8 @@
     <a class="dismiss">🗙</a>
   </div>
   <script src="bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-  <script type="text/javascript" src="https://unpkg.com/web3@1.8.1/dist/web3.min.js"></script>
-  <script type="text/javascript" src="https://unpkg.com/@walletconnect/web3-provider@1.8.0/dist/umd/index.min.js"></script>
-  <script src="interop/web3modal/web3modal.js"></script>
-  <script src="interop/web3modal/web3interop.bundle.js"></script>
+  <script src="_content/wcpoclib/js/index.bundle.js"></script>
+  <script src="_content/Radzen.Blazor/Radzen.Blazor.js?v=@(typeof(Radzen.Colors).Assembly.GetName().Version)"></script>
   <script src="interop/theme/theme.js"></script>
   <script src="interop/tooltip/tooltip.js"></script>
   <script src="_framework/blazor.webassembly.js"></script>
