--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
   <link href="css/app.css" rel="stylesheet" />
   <link href="css/mosaic.bootstrap.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
-  <!-- If you add any scoped CSS files, uncomment the following to load them
-  <link href="MOS.TraderApp.styles.css" rel="stylesheet" /> -->
+  <link rel="stylesheet" href="_content/Radzen.Blazor/css/default-base.css">
 </head>
 
 <body>
